Fix broken layout on IE

--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -7,15 +7,10 @@ a {
   font-family: Pacifico, sans-serif;
 }
 
-main {
-  margin-top: 80px;
-}
-
 .fixed-menu {
   position: fixed;
   top: 0;
   z-index: 100;
-  margin-bottom: 100px;
 }
 
 .bottom-spacer {
